# CraftingInterpreters

./: .gitignore  LICENSE  README.md  challenges.md
challenges/: helloworld.c  helloworld.java
cpplox/: CMakeLists.txt  loxexception.cpp
cpplox/src/: algorithm.h  array.h  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  debug.cpp  debug.h  expected.h  file.cpp  file.h  interned.cpp  interned.h  iterator.h  list.h  loxexception.h  main  main.cpp  memory.cpp  memory.h  object.cpp  object.h  optional.h  parser.cpp  parser.h  scanner.cpp  scanner.h  span.h  stack.h  string.cpp  string.h  table.h  utility.h  value.h  vector.h  vm.cpp  vm.h
jlox/jlox/: pom.xml
jlox/jlox/src/main/java/com/patviafore/lox/: AstPrinter.java  Environment.java  Interpreter.java  Lox.java  LoxCallable.java  LoxClass.java  LoxClosure.java  LoxFunction.java  LoxInstance.java  LoxList.java  LoxNativeMethod.java  Parser.java  Resolver.java  Return.java  RpnPrinter.java  RuntimeError.java  Scanner.java  StringUtils.java  Token.java  TokenType.java  Uninitialized.java
jlox/jlox/src/main/java/com/patviafore/tool/: GenerateAst.java
